[tool.poetry]
name = "dbt-northwind"
version = "0.1.0"
description = ""
authors = ["Bruno <bruno.eng.proj@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
dbt-core = "^1.9.2"
dbt-postgres = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
